[WIP] Ready for B19 testing

--- a/Languages/Japanese/DefInjected/DesignationCategoryDef/DesignationCategories.xml
+++ b/Languages/Japanese/DefInjected/DesignationCategoryDef/DesignationCategories.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <Rimatomics.label>ﾘﾑｱﾄﾐｸｽ</Rimatomics.label>
-  <Rimatomics.description>リムアトミクスで追加されたあらゆる建造物</Rimatomics.description>
+  <Rimatomics.description>リムアトミクスのあらゆる建造物</Rimatomics.description>
 
 
 </LanguageData>
