--- a/Languages/Japanese/DefInjected/ResearchProjectDef/ResearchProjects_RimatomicsActivate.xml
+++ b/Languages/Japanese/DefInjected/ResearchProjectDef/ResearchProjects_RimatomicsActivate.xml
@@ -3,7 +3,7 @@
 
   <RimatomicsActivate.label>リムアトミクス</RimatomicsActivate.label>
   <RimatomicsActivate.description>惑星の近くに探査機が探知されました。軽く暗号化したメッセージを繰り返しているが、解読できるはずです。</RimatomicsActivate.description>
-  <RimatomicsActivate.descriptionDiscovered>探査機との回線が開き、まるで中古人工装具セールスマンのようにやや怪しい男からのメッセージの再生が始まる。彼が「リムアトミクス」という会社の代表として売り口上をしらばく続ける。その間、突然研究端末への数百ギガバイトのダウンロードも始まる。すこし遅れたタイミングでセールスマンは説明に切り替える。「このデータは、リムアトミクス研究端末のための設計です。あらゆる発展段階の惑星に適した弊社の技術を購入することだけではなく、リムワールドにまで広がる貿易船ネットワークから、原子力開発に欠かせない資源をいっぱいに積んだ貿易船をいつでも呼ぶことができるのです！」\n\nリムアトミクスのタブが、建築メニューに追加されました。</RimatomicsActivate.descriptionDiscovered>
+  <RimatomicsActivate.descriptionDiscovered>探査機との回線が開き、まるで中古人工装具セールスマンのようにやや怪しい男からのメッセージの再生が始まる。彼は「リムアトミクス」という会社の代表として売り口上をしらばく続ける。その間、突然研究端末への数百ギガバイトのダウンロードも始まる。すこし遅れたタイミングでセールスマンは説明に切り替える。「このデータは、リムアトミクス研究端末のための設計です。あらゆる発展段階の惑星に適した弊社の技術を購入することだけではなく、リムワールドにまで広がる貿易船ネットワークから、原子力開発に欠かせない資源をいっぱいに積んだ貿易船をいつでも(※)呼ぶことができるのです！」\n\n建築メニューにリムアトミクスのタブが追加されました。</RimatomicsActivate.descriptionDiscovered>
 
 
 </LanguageData>
