--- a/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
+++ b/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
@@ -4,5 +4,10 @@
   <CoreBlast.label>炉心の爆発</CoreBlast.label>
   <CoreBlast.deathMessage>{0} は爆発で死にました。</CoreBlast.deathMessage>
 
+  <ArcDischarge.label>アーク放電</CoreBlast.label>
+  <ArcDischarge.deathMessage>{0} は上手に焼かれました。</CoreBlast.deathMessage>
+
+  <LaserDischarge.label>レーザー放射</CoreBlast.label>
+  <LaserDischarge.deathMessage>{0} は上手に焼かれました。</CoreBlast.deathMessage>
 
 </LanguageData>
