--- a/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_Projects.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_Projects.xml
@@ -53,7 +53,7 @@
   <!-- Tesla Coil -->
 
   <TeslaCoil.ResearchLabel>テスラコイル</TeslaCoil.ResearchLabel>
-  <TeslaCoil.ResearchDesc>短距離内の対象に向けて強力な放電を放てるテスラコイルの技術は素朴ですが、非常に効果的な兵器です。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</TeslaCoil.ResearchDesc>
+  <TeslaCoil.ResearchDesc>短距離内の対象に向けて強力な放電を放てるテスラコイルの技術は素朴ですが、非常に効果的な兵器です。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。\n\n近距離・命中率100%</TeslaCoil.ResearchDesc>
   <TeslaCoil.ResearchDescDisc>テスラコイルを自由に建てられます。既存のテスラコイルは最大出力で稼働しています。</TeslaCoil.ResearchDescDisc>
 
 
@@ -66,12 +66,16 @@
   <!-- /////////////////////////////////////////////////////// -->
 
   <Railgun.ResearchLabel>レールガン</Railgun.ResearchLabel>
-  <Railgun.ResearchDesc>レールガンは電磁誘導により弾帯を加速して超遠距離の目標を攻撃できます。25弾を持つマガジンからサボット弾を撃ちます。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Railgun.ResearchDesc>
+  <Railgun.ResearchDesc>レールガンは電磁誘導により弾帯を加速して超遠距離の目標を爆撃できます。25弾を持つマガジンからサボット弾を撃ちます。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。\n\n基礎ダメージ: 65\n電気パルス: 1000kW\n基礎射程距離: 40</Railgun.ResearchDesc>
   <Railgun.ResearchDescDisc>レールガンを自由に建てられます。既存のレールガンは最大出力で稼働しています。</Railgun.ResearchDescDisc>
 
   <Obelisk.ResearchLabel>オベリスク</Obelisk.ResearchLabel>
-  <Obelisk.ResearchDesc>オベリスクは集束固体レーザーで目標を焼き尽します。電力の負担は大きいですが、遠距離でも完璧な命中率と圧倒的な威力を誇ります。射程距離と出力の調整の実装も予定されています。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。</Obelisk.ResearchDesc>
+  <Obelisk.ResearchDesc>オベリスクは集束固体レーザーで目標を焼き尽します。電力の負担は大きいですが、遠距離でも完璧な命中率と圧倒的な威力を誇ります。射程距離と出力の調整の実装も予定されています。\n\n充電されたPPC、武器管制システム、そして目標捕捉システムが必要です。\n\n基礎ダメージ: 90\n電気パルス: 1000kW\n基礎射程距離: 40</Obelisk.ResearchDesc>
   <Obelisk.ResearchDescDisc>オベリスクを自由に建てられます。既存のオベリスクは最大出力で稼働しています。</Obelisk.ResearchDescDisc>
 
+<!-- オロチ -->
+  <Marauder.ResearchLabel>電磁プラズマ砲</Marauder.ResearchLabel>
+  <Marauder.ResearchDesc>電磁プラズマ砲は電磁誘導により複数の同軸銃身からプラズマの環状体を加速して遠距離の目標を爆撃し、強い放射能にさらせます。</Railgun.ResearchDesc>
+  <Marauder.ResearchDescDisc>電磁プラズマ砲を自由に建てられます。既存の電磁プラズマ砲は最大出力で稼働しています。</Marauder.ResearchDescDisc>
 
 </LanguageData>
