--- a/Languages/Japanese/DefInjected/ThingDef/Buildings_E_Weapons.xml
+++ b/Languages/Japanese/DefInjected/ThingDef/Buildings_E_Weapons.xml
@@ -10,26 +10,29 @@
   <RadarDish.label>目標捕捉 システム</RadarDish.label>
   <RadarDish.description>複合的な技術を生かし、陸と空の目標を追跡して兵器システムに情報を提供する装置。</RadarDish.description>
   
-  <PPCADS.description>アクティブ・ディナイアル・システムという非致死性指向性エネルギー兵器。この兵器が発射するミリ波の電磁波を浴びる対象は皮膚の灼熱感により一時敗走させられる。充電されたPPCと目標捕捉システムが必要</PPCADS.description>
+  <PPCADS.description>RA-22「ADS」\nアクティブ・ディナイアル・システムという非致死性指向性エネルギー兵器。この兵器が発射するミリ波の電磁波を浴びる対象は皮膚の灼熱感により一時敗走させられる。充電されたPPCと目標捕捉システムが必要</PPCADS.description>
   
   <PPCTeslaCoil.label>テスラコイル</PPCTeslaCoil.label>
-  <PPCTeslaCoil.description>短距離内の対象に向けて強力な放電を放つ装置。充電されたPPCと目標捕捉システムが必要</PPCTeslaCoil.description>
+  <PPCTeslaCoil.description>RA-42T「テスラコイル」\n短距離内の対象に向けて強力な放電を放つ装置。充電されたPPCと目標捕捉システムが必要</PPCTeslaCoil.description>
   
-  <PPCHEL.description>ハイ・エネルギー・レーザーという飛翔体を迎撃する装置。充電されたPPCと目標捕捉システムが必要</PPCHEL.description>
+  <PPCHEL.description>RA-702「HEL」\nハイ・エネルギー・レーザーという飛翔体を迎撃する装置。充電されたPPCと目標捕捉システムが必要</PPCHEL.description>
   
   <PPCRailgun.label>レールガン</PPCRailgun.label>
-  <PPCRailgun.description>電磁誘導により弾帯を加速して撃ち出す兵器。超遠距離。充電されたPPCと目標捕捉システムが必要</PPCRailgun.description>
+  <PPCRailgun.description>RA-1802D「ショウグン」\n電磁誘導により弾帯を加速して撃ち出す兵器。超遠距離。充電されたPPCと目標捕捉システムが必要</PPCRailgun.description>
   
   <Railgun_Cannon.label>レールガン迫撃砲</Railgun_Cannon.label>
   <Railgun_Cannon.description>レールガンと似た方法で壁を越えて爆弾を飛ばす兵器。遠距離で命中率が低い。</Railgun_Cannon.description>
 
   <PPCObelisk.label>オベリスク</PPCObelisk.label>
-  <PPCObelisk.description>集束レーザーで遠くにいる対象も完璧な命中率で焼き尽くせる指向性エネルギー兵器。充電されたPPCと目標捕捉システムが必要</PPCObelisk.description>
+  <PPCObelisk.description>RA-2152-X「オベリスク」\n集束レーザーで遠くにいる対象も完璧な命中率で焼き尽くせる指向性エネルギー兵器。充電されたPPCと目標捕捉システムが必要</PPCObelisk.description>
+
+  <PPCMarauder.label>電磁プラズマ砲</PPCMarauder.label>
+  <PPCMarauder.description>RA-3b「オロチ」\n電磁誘導によりプラズマの環状体を加速して撃ち出す兵器。遠距離。充電されたPPCと目標捕捉システムが必要</PPCMarauder.description>
   
   <!-- ICBM -->
 
   <MissileSilo.label>ミサイル サイロ</MissileSilo.label>
-  <MissileSilo.description>複数の大型ミサイルを格納する建築物。\nホットローンチ方式でミサイルを発射させる。</MissileSilo.description>
+  <MissileSilo.description>RA-1776b「ダモクレス」\n複数の大型ミサイルを格納する建築物。\nホットローンチ方式でミサイルを発射させる。</MissileSilo.description>
   
   <notReal.label>エラー</notReal.label>
 
