--- a/Languages/Japanese/DefInjected/ThingDef/Buildings_D_Env.xml
+++ b/Languages/Japanese/DefInjected/ThingDef/Buildings_D_Env.xml
@@ -26,6 +26,6 @@
   <CrashedRadioactiveShipPart.description>宇宙船の一部と思われる不思議な破片。コンピュータ、人工知能、金属を含有しているかもしれない。この機体は高レベルの放射線を放出している。</CrashedRadioactiveShipPart.description>
 
   <DU_Blastdoor.label>ブラストドア</DU_Blastdoor.label>
-  <DU_Blastdoor.description>劣化ウランで強化され、爆発の圧力に耐え、放射線遮蔽にもなる扉。</DU_Blastdoor.description>
+  <DU_Blastdoor.description>劣化ウランで強化された、爆発の圧力に耐えられる、\n放射線遮蔽にもなる扉。</DU_Blastdoor.description>
 
 </LanguageData>
