[WIP] Research strings partially working

--- a/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <FuelBurnRate.label>燃料消耗の速度</FuelBurnRate.label>
+  <FuelBurnRate.label>燃料消費の速度</FuelBurnRate.label>
   <FuelBurnRate.options.0.label>チート</FuelBurnRate.options.0.label>
 
 </LanguageData>
