--- a/Languages/Japanese/DefInjected/ThingDef/RadSuits.xml
+++ b/Languages/Japanese/DefInjected/ThingDef/RadSuits.xml
@@ -10,7 +10,7 @@
   <Apparel_MoppMaskWoodland.label>MOPPマスク (ウッドランド)</Apparel_MoppMaskWoodland.label>
   <Apparel_MoppMaskWoodland.description>戦闘用の放射線防護用マスク。普通のマスクより頑丈な作りで、突刺系攻撃から中程度の防御してくれる。すなわち、ヘルメット並みの防弾性がある。</Apparel_MoppMaskWoodland.description>
 
-  <Apparel_MoppMaskSnow.label>MOPPマスク (雪上)</Apparel_MoppMaskSnow.label>
+  <Apparel_MoppMaskSnow.label>MOPPマスク (雪)</Apparel_MoppMaskSnow.label>
   <Apparel_MoppMaskSnow.description>戦闘用の放射線防護用マスク。普通のマスクより頑丈な作りで、突刺系攻撃から中程度の防御してくれる。すなわち、ヘルメット並みの防弾性がある。</Apparel_MoppMaskSnow.description>
 
   <Apparel_RadiationSuit.label>放射線防護服</Apparel_RadiationSuit.label>
@@ -24,7 +24,7 @@
   <Apparel_MoppSuitWoodland.label>MOPPスーツ (ウッドランド)</Apparel_MoppSuitWoodland.label>
   <Apparel_MoppSuitWoodland.description>戦闘用の放射線防護服。普通の放射線防護用スーツより頑丈な作りだが、見た目ほど防弾性があるわけではない。</Apparel_MoppSuitWoodland.description>
 
-  <Apparel_MoppSuitSnow.label>MOPPスーツ (雪上)</Apparel_MoppSuitSnow.label>
+  <Apparel_MoppSuitSnow.label>MOPPスーツ (雪)</Apparel_MoppSuitSnow.label>
   <Apparel_MoppSuitSnow.description>戦闘用の放射線防護服。普通の放射線防護用スーツより頑丈な作りだが、見た目ほど防弾性があるわけではない。</Apparel_MoppSuitSnow.description>
 
 </LanguageData>
