New keys and fixed translations

--- a/Languages/Japanese/DefInjected/ThoughtDef/Thoughts_Memory_Tendself.xml
+++ b/Languages/Japanese/DefInjected/ThoughtDef/Thoughts_Memory_Tendself.xml
@@ -2,6 +2,6 @@
 <LanguageData>
 
   <Abducted.stages.0.label>説明がつかない出来事</Abducted.stages.0.label>
-  <Abducted.stages.0.description>昨日の夜、自分に何か起こったぞ… どこか変な場所に… うっ！頭が！</Abducted.stages.0.description>
+  <Abducted.stages.0.description>昨日の夜、どこかにつれられて何かされた… 変な場所に… うっ！頭が！</Abducted.stages.0.description>
 
 </LanguageData>
